--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,10 @@
-﻿<Window x:Class="KinectWPF.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:KinectWPF"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        xmlns:Toolbox="clr-namespace:Kinect.Toolbox;assembly=Kinect.Toolbox"
+        x:Class="KinectWPF.MainWindow"
+        Title="MainWindow" Height="514.656" Width="782.122">
     <Grid>
-        
+        <TextBlock x:Name="Message"  HorizontalAlignment="Center" VerticalAlignment="Top" Height="30" Background="Green" Foreground="Red" Margin="0,0,0,462.8" />
+        <Image Name="Image" Margin="68,27,72,2.8"/>
     </Grid>
 </Window>
