--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,10 +1,10 @@
 ﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:Toolbox="clr-namespace:Kinect.Toolbox;assembly=Kinect.Toolbox"
         x:Class="KinectWPF.MainWindow"
-        Title="MainWindow" Height="514.656" Width="782.122">
+        Title="MainWindow" Height="800" Width="800">
     <Grid>
         <TextBlock x:Name="Message"  HorizontalAlignment="Center" VerticalAlignment="Top" Height="30" Background="Green" Foreground="Red" Margin="0,0,0,462.8" />
-        <Image Name="Image" Margin="68,27,72,2.8"/>
+        <Image x:Name="kinectImage" Width="800" Height="800"/>
+        <Label x:Name="coordinatesLabel" Content="Label" HorizontalAlignment="Left" Margin="10,4,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.417,-6.562" Width="189" Height="59"/>
     </Grid>
 </Window>
