--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,6 +4,6 @@
         Title="MainWindow" Height="800" Width="800">
     <Grid>
         <TextBlock x:Name="Message"  HorizontalAlignment="Center" VerticalAlignment="Top" Height="30" Background="Green" Foreground="Red" Margin="0,0,0,462.8" />
-        <Image x:Name="kinectImage" Width="800" Height="800"/>
+        <Image x:Name="kinectImage" Width="Auto" Height="800"/>
     </Grid>
 </Window>
