--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,8 +3,24 @@
         x:Class="KinectWPF.MainWindow"
         Title="MainWindow" Height="800" Width="800">
     <Grid>
-        <TextBlock x:Name="Message"  HorizontalAlignment="Center" VerticalAlignment="Top" Height="30" Background="Green" Foreground="Red" Margin="0,0,0,462.8" />
-        <Image x:Name="kinectImage" Width="Auto" Height="800"/>
-        <Canvas x:Name="canvas" Background="White"></Canvas>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="4*" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="78*" />
+            <RowDefinition Height="209*" />
+            <RowDefinition Height="496*"/>
+        </Grid.RowDefinitions>
+
+        <Label Panel.ZIndex="1" x:Name="ScorLabel" Grid.Column="1" Content="Punkty:" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" Background="White" BorderThickness="0" RenderTransformOrigin="1.378,0.644"/>
+        <TextBlock x:Name="Message"  HorizontalAlignment="Center" VerticalAlignment="Top" Height="30" Background="Green" Foreground="Red" />
+        <Image x:Name="kinectImage" Width="Auto" Height="800" Margin="0,0,0,-16" Grid.RowSpan="3"/>
+
+        <Canvas x:Name="canvas" Grid.RowSpan="3" Grid.ColumnSpan="2">
+            <Canvas.Background>
+                <ImageBrush ImageSource=".\Images\Background.jpg" />
+            </Canvas.Background>
+        </Canvas>
     </Grid>
 </Window>
