--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,8 +13,6 @@
             <RowDefinition Height="496*"/>
         </Grid.RowDefinitions>
 
-        <Label Panel.ZIndex="1" x:Name="ScorLabel" Grid.Column="1" Content="Punkty:" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" Background="White" BorderThickness="0" RenderTransformOrigin="1.378,0.644"/>
-        <TextBlock x:Name="Message"  HorizontalAlignment="Center" VerticalAlignment="Top" Height="30" Background="Green" Foreground="Red" />
         <Image x:Name="kinectImage" Width="Auto" Height="800" Margin="0,0,0,-16" Grid.RowSpan="3"/>
 
         <Canvas x:Name="canvas" Grid.RowSpan="3" Grid.ColumnSpan="2">
@@ -34,5 +32,16 @@
                 </Rectangle.Fill>
             </Rectangle>
         </Canvas>
+
+        <Label Panel.ZIndex="1" x:Name="StartText" Content="PRZYGOTUJ SIE!" Padding="10" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="90,10,68,334" Foreground="White" Grid.Row="2" Height="143" Width="634" HorizontalAlignment="Center" FontFamily="Stencil" Grid.ColumnSpan="2" Visibility="Hidden"/>
+
+        <Label Panel.ZIndex="1" x:Name="ScoreText" Grid.Column="1" Content="Punkty:" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="36,0,38,31" Foreground="White" FontFamily="Sylfaen"/>
+        <Label Panel.ZIndex="1" x:Name="ScoreNumber" Grid.Column="1" Content="0" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="36,31,38,0" Foreground="White" FontFamily="Sylfaen"/>
+
+        <Label Panel.ZIndex="1" x:Name="TimeText" Content="Czas:" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="577,0,131,31" Foreground="White" FontFamily="Sylfaen" Grid.ColumnSpan="2"/>
+        <Label Panel.ZIndex="1" x:Name="TimeNumber" Content="0" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="604,31,0,0" Foreground="White" FontFamily="Sylfaen"/>
+
+        <Label Panel.ZIndex="1" x:Name="EndText" Content="Koniec Gry!&#xA;&#xA;     WYNIK " Padding="10" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="146,70,142,334" Foreground="White" Grid.Row="1" Height="288" Width="504" HorizontalAlignment="Center" FontFamily="Stencil" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+        <Label Panel.ZIndex="1" x:Name="EndNumber" Content="10" Padding="10" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="330,158,187,226" Foreground="White" Grid.Row="2" Height="103" Width="117" HorizontalAlignment="Center" FontFamily="Stencil"/>
     </Grid>
 </Window>
