--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,8 +1,11 @@
 ﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="KinectWPF.MainWindow"
-        Title="MainWindow" Height="640" Width="480">
+        Title="MainWindow" Height="800" Width="800">
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="Resources/Background.jpg"/>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="116*" />
             <ColumnDefinition Width="201*"/>
@@ -14,18 +17,14 @@
             <RowDefinition Height="496*"/>
         </Grid.RowDefinitions>
 
-        <Image x:Name="kinectImage" Width="Auto" Height="800" Margin="0,0,0,-31" Grid.RowSpan="3" Grid.ColumnSpan="2"/>
+        <Image x:Name="kinectImage" Width="auto" Height="auto" Margin="0,0,0,-31" Grid.RowSpan="3" Grid.ColumnSpan="2"/>
 
-        <Canvas x:Name="canvas" Grid.RowSpan="3" Grid.ColumnSpan="3">
-            <Canvas.Background>
-                <ImageBrush ImageSource=".\Resources\Background.jpg" />
-            </Canvas.Background>
-        </Canvas>
+        <Canvas x:Name="canvas" Grid.RowSpan="3" Grid.ColumnSpan="3"/>
 
         <Label Panel.ZIndex="1" x:Name="StartText" Content="PRZYGOTUJ SIE!" Padding="10" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="90,10,68,334" Foreground="White" Grid.Row="2" Height="143" Width="634" HorizontalAlignment="Center" FontFamily="Stencil" Grid.ColumnSpan="3" Visibility="Hidden"/>
 
         <Label Panel.ZIndex="1" x:Name="ScoreText" Grid.Column="2" Content="Punkty:" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="36,0,38,31" Foreground="White" FontFamily="Sylfaen"/>
-        <Label Panel.ZIndex="1" x:Name="ScoreNumber" Grid.Column="2" Content="0" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="63,31,65,0" Foreground="White" FontFamily="Sylfaen"/>
+        <Label Panel.ZIndex="1" x:Name="ScoreNumber" Grid.Column="2" Content="0" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="63.8,31,37.6,205.4" Foreground="White" FontFamily="Sylfaen" Grid.RowSpan="2" Width="57"/>
 
         <Label Panel.ZIndex="1" x:Name="TimeText" Content="Czas:" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="356,0,142,31" Foreground="White" FontFamily="Sylfaen" Grid.ColumnSpan="2" Grid.Column="1"/>
         <Label Panel.ZIndex="1" x:Name="TimeNumber" Content="0" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="362,31,142,0" Foreground="White" FontFamily="Sylfaen" Width="56" Grid.ColumnSpan="2" Grid.Column="1"/>
