--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,15 +1,15 @@
 ﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="KinectWPF.MainWindow"
-        Title="MainWindow" Height="800" Width="800">
+        Title="MainWindow" Height="900" Width="1600">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="Resources/Background.jpg"/>
         </Grid.Background>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="116*" />
-            <ColumnDefinition Width="201*"/>
-            <ColumnDefinition Width="79*" />
+            <ColumnDefinition Width="158*" />
+            <ColumnDefinition Width="479*"/>
+            <ColumnDefinition Width="159*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="78*" />
@@ -21,15 +21,15 @@
 
         <Canvas x:Name="canvas" Grid.RowSpan="3" Grid.ColumnSpan="3"/>
 
-        <Label Panel.ZIndex="1" x:Name="StartText" Content="PRZYGOTUJ SIE!" Padding="10" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="90,10,68,334" Foreground="White" Grid.Row="2" Height="143" Width="634" HorizontalAlignment="Center" FontFamily="Stencil" Grid.ColumnSpan="3" Visibility="Hidden"/>
+        <Label Panel.ZIndex="1" x:Name="StartText" HorizontalContentAlignment="Center" Content="PRZYGOTUJ SIE!" Padding="10" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="128,115,117,379" Foreground="White" Grid.Row="1" Height="288" Width="1347" HorizontalAlignment="Center" FontFamily="Stencil" Grid.ColumnSpan="3" Grid.RowSpan="2"/>
 
-        <Label Panel.ZIndex="1" x:Name="ScoreText" Grid.Column="2" Content="Punkty:" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="36,0,38,31" Foreground="White" FontFamily="Sylfaen"/>
-        <Label Panel.ZIndex="1" x:Name="ScoreNumber" Grid.Column="2" Content="0" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="63.8,31,37.6,205.4" Foreground="White" FontFamily="Sylfaen" Grid.RowSpan="2" Width="57"/>
+        <Label Panel.ZIndex="1" x:Name="ScoreText" Grid.Column="2" HorizontalContentAlignment="Center" Content="Punkty:" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="115,5,117,36" Foreground="White" FontFamily="Sylfaen" Height="46" Width="86"/>
+        <Label Panel.ZIndex="1" x:Name="ScoreNumber" Grid.Column="2" HorizontalContentAlignment="Center" Content="0" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="144,49,117,224" Foreground="White" FontFamily="Sylfaen" Grid.RowSpan="2" Width="57" Height="46"/>
 
-        <Label Panel.ZIndex="1" x:Name="TimeText" Content="Czas:" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="356,0,142,31" Foreground="White" FontFamily="Sylfaen" Grid.ColumnSpan="2" Grid.Column="1"/>
-        <Label Panel.ZIndex="1" x:Name="TimeNumber" Content="0" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="362,31,142,0" Foreground="White" FontFamily="Sylfaen" Width="56" Grid.ColumnSpan="2" Grid.Column="1"/>
+        <Label Panel.ZIndex="1" x:Name="TimeText" Content="Czas:" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="714,5,182,36" Foreground="White" FontFamily="Sylfaen" Grid.Column="1" Height="46" Width="62"/>
+        <Label Panel.ZIndex="1" x:Name="TimeNumber" Content="0" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="720,36,182,5" Foreground="White" FontFamily="Sylfaen" Width="56" Grid.Column="1" Height="46"/>
 
-        <Label Panel.ZIndex="1" x:Name="EndText" Content="Koniec Gry!&#xA;&#xA;     WYNIK " Padding="10" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="146,70,142,334" Foreground="White" Grid.Row="1" Height="288" Width="504" HorizontalAlignment="Center" FontFamily="Stencil" Grid.RowSpan="2" Grid.ColumnSpan="3"/>
-        <Label Panel.ZIndex="1" x:Name="EndNumber" Content="10" Padding="10" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="98,158,187,226" Foreground="White" Grid.Row="2" Height="103" Width="117" HorizontalAlignment="Center" FontFamily="Stencil" Grid.Column="1"/>
+        <Label Panel.ZIndex="1" x:Name="EndText" Content="Koniec Gry!&#xA;&#xA;     WYNIK " HorizontalContentAlignment="Center" Padding="10" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="128,115,109,379" Foreground="White" Grid.Row="1" Height="288" Width="1355" HorizontalAlignment="Center" FontFamily="Stencil" Grid.RowSpan="2" Grid.ColumnSpan="3" VerticalAlignment="Center"/>
+        <Label Panel.ZIndex="1" x:Name="EndNumber" Content="10" Padding="10" HorizontalContentAlignment="Center" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="424,275,417,171" Foreground="White" Grid.Row="2" Height="104" Width="117" HorizontalAlignment="Center" FontFamily="Stencil" Grid.Column="1"/>
     </Grid>
 </Window>
