--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,35 +1,35 @@
 ﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="KinectWPF.MainWindow"
-        Title="MainWindow" Height="900" Width="1600">
+        Title="MainWindow" Height="800" Width="1200">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="Resources/Background.jpg"/>
         </Grid.Background>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="158*" />
-            <ColumnDefinition Width="479*"/>
-            <ColumnDefinition Width="159*" />
+            <ColumnDefinition Width="0*" />
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="78*" />
-            <RowDefinition Height="209*" />
-            <RowDefinition Height="496*"/>
+            <RowDefinition Height="0*" />
+            <RowDefinition />
+            <RowDefinition Height="0*"/>
         </Grid.RowDefinitions>
 
-        <Image x:Name="kinectImage" Width="auto" Height="auto" Margin="0,0,0,-31" Grid.RowSpan="3" Grid.ColumnSpan="2"/>
+        <Image x:Name="kinectImage" Width="auto" Height="auto" Margin="0,0,75.6,-30.6" Grid.RowSpan="3" Grid.ColumnSpan="2"/>
 
-        <Canvas x:Name="canvas" Grid.RowSpan="3" Grid.ColumnSpan="3"/>
+        <Canvas x:Name="canvas" Grid.RowSpan="2" Grid.ColumnSpan="3" Margin="0,0,-3.4,0.4"/>
 
-        <Label Panel.ZIndex="1" x:Name="StartText" HorizontalContentAlignment="Center" Content="PRZYGOTUJ SIE!" Padding="10" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="128,115,117,379" Foreground="White" Grid.Row="1" Height="288" Width="1347" HorizontalAlignment="Center" FontFamily="Stencil" Grid.ColumnSpan="3" Grid.RowSpan="2"/>
+        <Label Panel.ZIndex="1" x:Name="StartText" HorizontalContentAlignment="Center" Content="PRZYGOTUJ SIE!" Padding="10" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="-66,231,-87.4,251.4" Foreground="White" Grid.Row="1" Height="288" Width="1347" HorizontalAlignment="Center" FontFamily="Stencil" Grid.ColumnSpan="3"/>
 
-        <Label Panel.ZIndex="1" x:Name="ScoreText" Grid.Column="2" HorizontalContentAlignment="Center" Content="Punkty:" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="115,5,117,36" Foreground="White" FontFamily="Sylfaen" Height="46" Width="86"/>
-        <Label Panel.ZIndex="1" x:Name="ScoreNumber" Grid.Column="2" HorizontalContentAlignment="Center" Content="0" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="144,49,117,224" Foreground="White" FontFamily="Sylfaen" Grid.RowSpan="2" Width="57" Height="46"/>
+        <Label Panel.ZIndex="1" x:Name="ScoreText" Grid.Column="1" HorizontalContentAlignment="Center" Content="Punkty:" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="40" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="1030,0,18.6,678.4" Foreground="White" FontFamily="Sylfaen" Height="92" Width="145" Grid.Row="1"/>
+        <Label Panel.ZIndex="1" x:Name="ScoreNumber" Grid.Column="1" HorizontalContentAlignment="Center" Content="0" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="40" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="1039,46,18.6,660.4" Foreground="White" FontFamily="Sylfaen" Width="136" Height="64" Grid.Row="1"/>
 
-        <Label Panel.ZIndex="1" x:Name="TimeText" Content="Czas:" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="714,5,182,36" Foreground="White" FontFamily="Sylfaen" Grid.Column="1" Height="46" Width="62"/>
-        <Label Panel.ZIndex="1" x:Name="TimeNumber" Content="0" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="20" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="720,36,182,5" Foreground="White" FontFamily="Sylfaen" Width="56" Grid.Column="1" Height="46"/>
+        <Label Panel.ZIndex="1" x:Name="TimeText" Content="Czas" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="40" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="906,0,159.6,678.4" Foreground="White" FontFamily="Sylfaen" Grid.Column="1" Height="92" Width="128" Grid.Row="1"/>
+        <Label Panel.ZIndex="1" x:Name="TimeNumber" Content="0" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Padding="10" VerticalAlignment="Center" FontSize="40" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="906,46,163.6,641.4" Foreground="White" FontFamily="Sylfaen" Width="124" Grid.Column="1" Height="83" Grid.Row="1"/>
 
-        <Label Panel.ZIndex="1" x:Name="EndText" Content="Koniec Gry!&#xA;&#xA;     WYNIK " HorizontalContentAlignment="Center" Padding="10" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="128,115,109,379" Foreground="White" Grid.Row="1" Height="288" Width="1355" HorizontalAlignment="Center" FontFamily="Stencil" Grid.RowSpan="2" Grid.ColumnSpan="3" VerticalAlignment="Center"/>
-        <Label Panel.ZIndex="1" x:Name="EndNumber" Content="10" Padding="10" HorizontalContentAlignment="Center" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="424,275,417,171" Foreground="White" Grid.Row="2" Height="104" Width="117" HorizontalAlignment="Center" FontFamily="Stencil" Grid.Column="1"/>
+        <Label Panel.ZIndex="1" x:Name="EndText" Content="Koniec Gry!&#xA;&#xD;&#xA;   WYNIK " HorizontalContentAlignment="Center" Padding="10" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="-66,231,-95.4,251.4" Foreground="White" Grid.Row="1" Height="288" Width="1355" HorizontalAlignment="Center" FontFamily="Stencil" Grid.ColumnSpan="3" VerticalAlignment="Center"/>
+        <Label Panel.ZIndex="1" x:Name="EndNumber" Content="10" Padding="10" HorizontalContentAlignment="Center" VerticalAlignment="Center" FontSize="80" BorderThickness="0" RenderTransformOrigin="1.378,0.644" Margin="536,547,540.6,119.4" Foreground="White" Grid.Row="1" Height="104" Width="117" HorizontalAlignment="Center" FontFamily="Stencil" Grid.Column="1"/>
     </Grid>
 </Window>
